themes/museumcollab-custom-theme/asset/sass/_screen.scss
* {
    box-sizing: border-box;
}

html {
    height: 100%;
    padding: 0;
    margin: 0;
}

body {
    background-color: $bg;
    color: $text;

    font-family: Montserrat, sans-serif;
    font-size: $base-font-size;
    
    line-height: $base-line-height;
    margin: 0;
    word-wrap: break-word;
}

a:link {
    text-decoration: none;
    color: $link;
}

a:visited {
    color: $link;
}

a:active,
a:hover {
    color: lighten($link, 20%);
}

// mark external links
// select any link that contain //
// ignore links that are part of project 
// https://davidwalsh.name/external-links-css
a[href*="//"]:not([href*="museumcollab"])::after {
    content: " \21aa";
}

h1, h2, h3, h4, h5, h6 {
    color: $heading;
}

h1 {
    font-size: 2 * $base-font-size;
    line-height: 2 * $base-line-height;
}

h2 {
    font-size: 1.5 * $base-font-size;
    line-height: 1.5 * $base-line-height;
}

h3 {
    font-size: 1.25 * $base-font-size;
    line-height: 1.5 * $base-line-height;
}

h4 {
    font-size: 1.125 * $base-font-size;
}

img {
    max-width: 100%;
    height: auto;
}

/* @group ----- Forms ----- */

input,
textarea,
button,
.button,
select {
    font-family: "Open Sans", sans-serif;
    font-size: $base-font-size;
    line-height: $base-line-height;
    margin: 0;
    vertical-align: top;
}

input[type="text"],
input[type="password"],
input[type="email"],
input[type="url"],
textarea {
    appearance: none;
    border-radius: 0;
    height: 1.5 * $spacing-l;
    border: 1px solid $light;
    padding: ($spacing-s - 1px) gutter();
    margin: 0;
}

textarea {
    height: 3 * $spacing-l;
}

input[type="file"] {
    line-height: 1;
    vertical-align: bottom;
    font-size: .75 * $base-font-size;
}

button,
a.button,
[type="submit"] {
    background-color: $light;
    border-radius: 2px;
    padding: $spacing-s;
    display: inline-block;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    border: 0;
    cursor: pointer;
}

select {
    background-color: #fff;
    padding: $spacing-s;
    border-color: $light;
    height: 1.5 * $spacing-l;
}

::-webkit-input-placeholder {
   font-style: italic;
}

:-moz-placeholder { /* Firefox 18- */
   font-style: italic;
}

::-moz-placeholder {  /* Firefox 19+ */
   font-style: italic;
}

:-ms-input-placeholder {
   font-style: italic;
}

.field {
    margin: $spacing-l 0;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.field .field-meta {
    width: 30%;
    padding: $spacing-s gutter() 0 0;
}

.field .inputs {
    width: 70%;
    padding-left: gutter();

    & > select,
    & > textarea,
    & > input[type="text"],
    & > input[type="password"],
    & > input[type="email"],
    & > input[type="url"] {
        width: 100%;
    }

    input[type="checkbox"] {
        vertical-align: bottom;
    }
}

.field.required .field-meta:after {
    content: "\f069";
    font-family: "Font Awesome 5 Free";
    font-size: .75 * $base-font-size;
}

.field .value:not(:last-child) {
    margin-bottom: $spacing-m;
}

.field-description {
    font-size: .75 * $base-font-size;
}

/* @end */

/* @group ----- Navigation ----- */

#skipnav {
  position: fixed;
  top: $spacing-l;
  left: 50%;
  border: 1px solid $gray;
  transform: translateX(-50%);
  z-index: -5;
  padding: $spacing-s;
  background-color: #fff;
  opacity: 0;
  
  &:focus {
    z-index: 1000;
    opacity: 1;
  }
}

header h1 {
  margin: 0;
}

header nav {
    position: relative;
    padding: 0;
}

header nav.closed ul {
    height: 0;
    overflow: hidden;
    margin: 0;
}

header nav:before {
    font-family: "Font Awesome 5 Free";
    content: "\f0c9";
    display: block;
    width: 1.25 * $spacing-l;
    height: 1.25 * $spacing-l;
    border: 1px solid $light;
    text-align: center;
    border-radius: 2px;
    position: absolute;
    right: gutter();
    top: -(1.625 * $spacing-l);
    cursor: pointer;
    line-height: 1.25 * $base-line-height;
}

header nav.open {
    margin: $spacing-m 0 -1px;
}

header nav.open:before {
    content: "\f00d";
}

header nav ul {
    padding-left: 0;
    list-style: none;
    position: relative;
    margin: 0 auto;

    a {
        display: inline-block;
        width: 100%;
        padding: $spacing-s;
    }

    a:hover {
        border-bottom: 0;
        background-color: $light;
    }

    li {
        border-top: 1px solid $light;
        position: relative;
    }

    li li:last-of-type {
        padding-bottom: 0;
    }

    li.active {
        font-weight: bold;
    }
    
    li.parent {
        position: relative;
    }
    
    .parent-link {
      display: flex;
    }

    .parent-link > a {
        width: calc(100% - #{2 * $spacing-l});
    }
    
    .child-toggle {
        color: $light;
        width: 2 * $spacing-l;
        text-align: center;
        background-color: #fff;
        border-left: 1px solid $light;
        appearance: none;
        
        &:before {
            font-family: "Font Awesome 5 Free";
            content: "\f105";
        }
    }
}

header nav > ul > li:last-child {
    border-bottom: 1px solid $light;
    padding-bottom: -1px;
}

header nav > ul ul li {
    height: 0;
    overflow: hidden;
    border: 0;
}

header nav ul.open > li {
    height: auto;
    border-top: 1px solid $light;
    padding-top: -1px;
}

/* Second level items */
header nav > ul > li > ul > li.active > a {
    margin-left: -1.5em;
}

header nav > ul > li > ul > li.active > a:before {
    content: ">";
    display: inline-block;
    width: 1.5em;
}

header nav > ul > li > ul > li a {
    padding-left: $spacing-l;
}

/* Third level items */
header nav > ul > li > ul > li > ul > li a {
    padding-left: 2 * $spacing-l;
}

/* Fourth level items */
header nav > ul > li > ul > li > ul > li > ul > li a {
    padding-left: 3 * $spacing-l;
}

.sub-menu ul {
    padding-left: 0;
    list-style-type: none;
    margin-top: $spacing-m;
}
/* ... */

